--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/Fettuccine.html">Fettuccine title</a>
+    <ul>
+        <li><a href="/recipes/Fettuccine.html">Fettuccine title (Click on this)</a></li>
+        <li><a href="/recipes/mansaf.html">mansaf title</a></li>
+        <li><a href="/recipes/burger.html">burger title</a></li>
+        
+    </ul>
 </body>
 </html>
