add the simple and weak css style

--- a/recipes/Fettuccine.html
+++ b/recipes/Fettuccine.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Fettuccine</h1>
-    <img src="/images/Fut.jpeg" alt="Fettuccine img" width="300" height=auto>
+    <img src="/images/image.png" alt="Fettuccine img">
     <br>
-    <h2>the description of Fettuccine : </h2>
-    <h3>Fettuccine is a type of long, flat pasta that originated in Italy. It is commonly served with creamy sauces, such as Alfredo sauce, or with meat and vegetable-based sauces. Fettuccine is known for its rich texture and ability to hold thick sauces well, making it a popular choice in many classic Italian dishes.</h3>
+    <h2>the description of Fettuccine :<span> is a type of long, flat pasta that originated in Italy. It is commonly served with creamy sauces, such as Alfredo sauce, or with meat and vegetab </span> </h2>
     <br>
-    <h3>Ingredients : </h3>
+    <h3 class="Ing">Ingredients : </h3>
     <ul>
         <li>Fettuccine pasta (250 grams)</li>
         <li>Heavy cream (1 cup)</li>
@@ -24,7 +24,7 @@
         <li>Fresh parsley (for garnish)</li>
     </ul>
     <br>
-   <h3>steps : </h3>
+   <h3 class="ste">steps : </h3>
     <ol>
         <li>Boil a large pot of salted water and cook the fettuccine pasta until al dente. Drain and set aside.</li>
         <li>In a large pan over medium heat, melt the butter.</li>
